# DeepLearningCpp

./: .gitignore  CMakeLists.txt  DLCPPConfig.cmake
docs/: Doxyfile.in  README.md  mainpage.md
docs/html/: annotated.html  classNetwork-members.html  classNetwork.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md__home_nathanael_tensorflow_DeepLearningCpp_docs_README.html  md__home_nathanael_tensorflow_DeepLearningCpp_docs_mainpage.html  network_8h_source.html  pages.html  structBetterDataset-members.html  structBetterDataset.html  utils_8h_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_8.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  pages_1.js  searchdata.js
docs/latex/: annotated.tex  classNetwork.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  index.tex  md__home_nathanael_tensorflow_DeepLearningCpp_docs_README.tex  md__home_nathanael_tensorflow_DeepLearningCpp_docs_mainpage.tex  refman.tex  structBetterDataset.tex
include/: network.h  utils.h
src/: network.cpp  utils.cpp
tests/: tests.cpp
